--- a/Html Practise/Style.css
+++ b/Html Practise/Style.css
@@ -1,9 +1,34 @@
 h1 {
-    color: brown;
-    font-style: oblique;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: goldenrod;
+    text-decoration: underline;
+}
+
+a:link {
+    color: red;
+    text-decoration: none;
+}
+
+a:visited {
+    color: lightseagreen;
+}
+
+a:hover {
+    color: moccasin;
+}
+
+a:active {
+    color: orange;
 }
 
 h2 {
-    color: burlywood;
-    font-style: italic;
+    color: orange;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+h4:first-letter {
+    font-size: 200%;
+    text-transform: capitalize;
 }
