--- a/Css Practise/Chap(Color).css
+++ b/Css Practise/Chap(Color).css
@@ -14,6 +14,7 @@ h1 {
     background-color: hsla(0, 100%, 100%, 0.5);
     color: #64645a;
     padding: inherit;
+    text-align: center;
 }
 
 p {
