--- a/Css Practise/Chap(Boxes).css
+++ b/Css Practise/Chap(Boxes).css
@@ -4,12 +4,6 @@ div.box {
     background-color: pink;
 }
 
-p {
-    height: 75%;
-    width: 75%;
-    background-color: pink;
-}
-
 td.description {
     min-width: 450px;
     max-width: 650px;
@@ -41,4 +35,73 @@ p.one {
 
 p.two {
     overflow: scroll;
+}
+
+p.three {
+    border-width: 2px;
+    border-style: solid;
+}
+
+p.four {
+    border-top-style: outset;
+    border-bottom-style: dotted;
+    border-right-style: solid;
+    border-left-style: solid;
+}
+
+p.five {
+    border-style: solid;
+    border-width: 1px 4px 12px 4px;
+}
+
+p.six {
+    border-style: outset;
+    border-width: thick;
+}
+
+p.eight {
+    border-style: outset dotted solid inset;
+    border-color: blue pink red yellow;
+    border-width: 2px 12px 10px 5px;
+}
+
+p.ten {
+    border: 2px outset yellow;
+}
+
+p.eleven {
+    border: 2px solid red;
+    padding: 50px;
+    margin: 100px 250px;
+}
+
+p.twelve {
+    border: 2px solid #0088dd;
+    padding: 50px;
+}
+
+p.thirteen {
+    width: 500px;
+    border: 2px solid yellow;
+    margin: 10px auto 50px auto;
+    padding: 100px;
+}
+
+p.nigga {
+    border: 3px inset orange;
+}
+
+li {
+    display: inline;
+    margin-right: 20px;
+    border: 2px solid red;
+    padding: 10px;
+}
+
+#first {
+    border: 2px solid red;
+    padding: 100px;
+    margin: 10px auto 10px auto;
+    box-shadow: -5px 10px 10px 10px rgb(131, 126, 126);
+    border-radius: 10px;
 }
