--- a/Css Practise/Chap(Table).css
+++ b/Css Practise/Chap(Table).css
@@ -36,7 +36,7 @@ ul.shorthand {
     list-style: inside decimal;
 }
 
-table {
+table.one {
     border: 2px solid;
     width: 50%;
     padding: 50px;
@@ -73,4 +73,26 @@ td:hover {
 
 .money {
     text-align: right;
+}
+
+.empty {
+    border: 2px solid;
+}
+
+table.two {
+    margin: 60px;
+    empty-cells: hide;
+    border-collapse: separate;
+}
+
+table.Three {
+    background-color: #0088dd;
+    padding: 15px;
+    border: 2px solid #000000;
+    border-spacing: 50px 25px;
+}
+
+td.gap {
+    border: 2px solid;
+    font-size: 300%;
 }
