--- a/P3, Styles Conference/style.css
+++ b/P3, Styles Conference/style.css
@@ -225,7 +225,20 @@ em {
     text-align: right;
 }
 
+/*
+  ========================================
+  Leads
+  ========================================
+*/
 
+.lead{
+    text-align: center;
+}
+
+.lead p{
+    font-size: 21px;
+    line-height: 33px;
+}
 /*
   ========================================
   Links
